--- a/notebooks/3_InferenceAndCausality_Week3_ProxyData.ipynb
+++ b/notebooks/3_InferenceAndCausality_Week3_ProxyData.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2ca1293e",
    "metadata": {},
    "outputs": [],
@@ -41,10 +41,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "446d4a61",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicting Y (cancer) using self reported smoking only\n",
+      "Naive (Y ~ X):\n",
+      "  beta_X = 0.579\n",
+      "\n",
+      "Proxy-adjusted to include both self report and Nicotin level biomarker(Y ~ X + NL):\n",
+      "  beta_X  = 0.006   (should shrink toward 0)\n",
+      "  beta_NL = 1.356  (captures the true U effect)\n",
+      "\n",
+      "Predicting Y (cancer) using Biomarker only (Y ~ NL):\n",
+      "  beta_NL = 1.361\n"
+     ]
+    }
+   ],
    "source": [
     "N = 200_000\n",
     "rng = np.random.default_rng(12)\n",
@@ -120,11 +137,54 @@
     "**Proxy strength:** In section C, increase proxy noise (e.g., `Z = U + 1.5*eps_z`).  \n",
     "   - How do `beta_X` and `beta_NL` change? What does this say about **weak proxies**?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "63a79896",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "With a weaker proxy (more noise): Y ~ X + NL_weak\n",
+      "  beta_X      = 0.490\n",
+      "  beta_NLweak = 0.219\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "N = 200_000\n",
+    "rng = np.random.default_rng(12)\n",
+    "\n",
+    "U = rng.normal(0, 1, N)\n",
+    "X = U + rng.normal(0, 1.0, N)\n",
+    "\n",
+    "Z_noise = rng.normal(0, 1, N)\n",
+    "NL_weak = U + 1.5 * Z_noise\n",
+    "\n",
+    "logit = -0.7 + 1.4 * U\n",
+    "pY = 1 / (1 + np.exp(-logit))\n",
+    "Y = (rng.random(N) < pY).astype(int)\n",
+    "\n",
+    "dfw = pd.DataFrame(dict(X=X, NL_weak=NL_weak, Y=Y))\n",
+    "\n",
+    "m_weak = sm.Logit(dfw[\"Y\"], sm.add_constant(dfw[[\"X\",\"NL_weak\"]])).fit(disp=False)\n",
+    "\n",
+    "print(\"With a weaker proxy (more noise): Y ~ X + NL_weak\")\n",
+    "print(f\"  beta_X      = {m_weak.params['X']:.3f}\")\n",
+    "print(f\"  beta_NLweak = {m_weak.params['NL_weak']:.3f}\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.11.3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -138,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
