--- a/notebooks/2_InferenceAndCausality_Week3_ConditionalIndependence.ipynb
+++ b/notebooks/2_InferenceAndCausality_Week3_ConditionalIndependence.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2ca1293e",
    "metadata": {},
    "outputs": [],
@@ -116,10 +116,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "069adc8b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chain: corr(A,C)  (marginal) = 0.5801684286913067\n",
+      "Fork:  corr(A,C)  (marginal) = 0.49713950788544\n",
+      "Collider: corr(A,C) (marginal) = -0.01064898968845041\n",
+      "\n",
+      "Conditioning (approx via binning):\n",
+      "Chain: corr(A,C | B) ≈ 0.047197088807209964\n",
+      "Fork:  corr(A,C | U) ≈ 0.03878851215357192\n",
+      "Collider: corr(A,C | B) ≈ -0.4745972035238439\n"
+     ]
+    }
+   ],
    "source": [
     "def sim_chain(N=50_000, seed=1):\n",
     "    rng = np.random.default_rng(seed)\n",
@@ -206,21 +221,34 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1f2d2e41",
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4abb6e94",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d6046f8d",
-   "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-0.3767921699674964)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "threshold = np.percentile(coll[\"B\"], 90)\n",
+    "coll_top10 = coll[coll[\"B\"] >= threshold]\n",
+    "corr_top10 = np.corrcoef(coll_top10[\"A\"], coll_top10[\"C\"])[0, 1]\n",
+    "\n",
+    "corr_top10\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.11.3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -234,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
